+more generic sense after minimal research (ahem) <ditch day#64266>

--- a/wiki/ditch_day.wikitext
+++ b/wiki/ditch_day.wikitext
@@ -3,5 +3,6 @@
 ===Noun Phrase===
 '''Ditch Day'''
 
+# A day on which a group of students, generally the senior class, leaves the campus and its responsibilities for a day.
 # A tradition in which Caltech seniors leave the campus for the day and underclassmen (all considered [[frosh]] regardless of actual year) attempt to break into their [[stack]]s.
 #: ''Ditch Day is tomorrow, frosh.''
