/* Usage Note */ <Caltech#64269>

--- a/wiki/Caltech.wikitext
+++ b/wiki/Caltech.wikitext
@@ -7,4 +7,4 @@
 
 ===Usage Note===
 
-While print media have the habit of writing "Cal Tech" and even enshrining this usage in their style guides, the administration, faculty, student body and alumni of the Institute prefer "Caltech".
+While print media have the habit of writing "Cal Tech", even enshrining this usage in their style guides, the administration, faculty, student body and alumni of the Institute prefer "Caltech".
