cleanup <code review#64259>

--- a/wiki/code_review.wikitext
+++ b/wiki/code_review.wikitext
@@ -1,1 +1,15 @@
-[[Code]] Review involves identifying and verifying the choice of [[algorithms]], coding styles and compliance with the [[software design]].
+==English==
+
+===Noun Phrase===
+'''code review'''
+
+# (''software engineering'')(''uncountable'') The practice of identifying and verifying the choice of [[algorithms]], coding styles and compliance with the [[software design]].
+#: ''After several painful episodes, we've decided to adopt code review for all major changes.''
+# (''software engineering'')(''countable'') The act of performing code review on a particular piece of code.
+#: ''How did that get through two separate code reviews?''
+
+===Transitive Verb===
+'''code review'''
+
+# (''software engineering'') To perform code review on.
+#: ''Did anyone code review that class before it went into the shipping version?''
