--- a/wiki/%CA%83.wikitext
+++ b/wiki/%CA%83.wikitext
@@ -1,7 +1,7 @@
 ==Letter==
-'''Ʃ''' '''ʃ'''
+'''Ʃ''' '''ʃ''' (esh)
 
-#a symbol of the [[IPA]], representing a voiceless [[postalveolar]] [[fricative]].
+#a symbol of the [[IPA]] (downcase only), representing a voiceless [[postalveolar]] [[fricative]].
 <!-- African? -->
 ===Other Forms===
 *With curl: [[ʆ]]
