--- a/wiki/%CA%83.wikitext
+++ b/wiki/%CA%83.wikitext
@@ -1,5 +1,5 @@
 ==Letter==
-'''Ʃ''' '''ʃ''' (esh)
+'''Ʃ''' '''ʃ''' ('''esh''')
 
 #a symbol of the [[IPA]] (downcase only), representing a voiceless [[postalveolar]] [[fricative]].
 <!-- African? -->
