--- a/wiki/curiosity.wikitext
+++ b/wiki/curiosity.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Pronunciation===
 *[[w:AHD|AHD]]: kyoo͞r"ēŏs'ətē
-*[[w:IPA|IPA]]: /ˌkjuːriːˈɒsətiː/
-*[[w:SAMPA|SAMPA]]: /%kju:ri:"Qs@ti:/
+*[[w:IPA|IPA]]: /ˌkjuəriˈɒsəti/
+*[[w:SAMPA|SAMPA]]: /%kju@ri"Qs@ti/
 
 ===Noun===
 '''curiosity'''
@@ -11,7 +12,11 @@
 #:''Out of curiosity, why are you wearing your shirt backwards?'' (means, "I am just wondering")
 
 ====Translations====
+*Chinese: [[好奇]], [[好奇心]], [[珍品]]
 *[[Finnish]]: [[uteliaisuus]]
+*French: [[curiosité]]
+*Italian: [[curiosità]]
+*Japanese: [[好奇心]] (こうきしん), [[珍奇]] (ちんき)
 *[[Lithuanian]]: [[smalsumas]] ''m'', [[žingeidumas]] ''m''
 
 ====Related words====
