--- a/wiki/honor.wikitext
+++ b/wiki/honor.wikitext
@@ -1,7 +1,10 @@
 ==English==
+===Variant spellings===
+*[[honour]]
 ===Noun===
 '''honor''', plural: '''honors'''
-: An objectification of praiseworthiness, respect.  (I.e. something that represents praiseworthiness, respect.)
+#An objectification of praiseworthiness, respect.  (I.e. something that represents praiseworthiness, respect.)
+----
 
 ==Latin==
 ===Noun===
