--- a/wiki/aqua.wikitext
+++ b/wiki/aqua.wikitext
@@ -1,4 +1,16 @@
-#A shade of [[color]], usually a mix of [[green]] and [[blue]] similar to the color [[turquoise]].
+==English==
+===Noun===
+'''aqua'''
+
+# [[water]]
+#A shade of [[colour]], usually a mix of [[green]] and [[blue]] similar to the colour [[turquoise]].
+
+===Synonyms===
+*[[aquamarine]] (2)
+
+===Related terms===
+*[[aquatic]]
+*[[aqueous]]
 
 ----
 ==Latin==
