Typo fix <labradorite#64273>

--- a/wiki/labradorite.wikitext
+++ b/wiki/labradorite.wikitext
@@ -7,7 +7,7 @@
 :Named for the type locality in [[Labrador]].
 
 ===Noun===
-#A [[plagioclase]] [[feldspar]], the fourth member of the Albite-Anorthite [[solid solution]] series. Often very coarsely [[crystal]]line, it is used as a decorative stone for carvings and building facades. Crystal surfaces often show a bluish reflection called "Schiller", which resembles the reflections from a butterfly's wing.
+#A [[plagioclase]] [[feldspar]], the fourth member of the Albite-Anorthite [[solid solution]] series. Often very coarsely [[crystal]]line, it is used as a decorative stone for carvings and building façades. Crystal surfaces often show a bluish reflection called "Schiller", which resembles the reflections from a butterfly's wing.
 
 === Chemical composition ===
 *Calcium sodium aluminum silicate, <math>Ca_xNa_xAlSi_3O_8</math>
