--- a/wiki/albite.wikitext
+++ b/wiki/albite.wikitext
@@ -4,14 +4,14 @@
 
 ===Etymology===
 
-:From the Latin albus (white), the common color of the mineral.
+:From the Latin ''[[albus]]'' (white), the common colour of the mineral.
 
 ===Noun===
 #A [[plagioclase]] [[feldspar]], the first member of the Albite-Anorthite [[solid solution]] series. Primarily a [[mineral]] of [[plutonic]] rocks, also found in [[pegmatite]]s. When Albite substitutes for a potassium feldspar in [[granite]], the rock is called [[quartz monzonite]].
 
 
 === Chemical composition ===
-*Sodium aluminum silicate, <math>NaAlSi_3O_8</math>
+*Sodium aluminium silicate, <math>NaAlSi_3O_8</math>
  
 === Physical properties ===
 
@@ -23,7 +23,6 @@
 *Cleavage: two good at about 94º to each other
 *Habit: Triclinic - pinacoidal. Usually twinned and [[striated]]. The striations are visible to the naked eye, and are characteristic of plagioclase feldspars in general and Albite in particular.
 
-===Related words===
+===Related terms===
 :''See'' [[Rock]], [[Feldspar]], [[Quartz monzonite]]
-
 [[Category:Mineralogy]]
