--- a/wiki/focus.wikitext
+++ b/wiki/focus.wikitext
@@ -88,10 +88,11 @@
 These translations are commented out because there is no definition yet on this page.  They can be added to the appropriate table(s) of translations above once definitions are added.
 *Danish: focus ''n''
 *Dutch: focus ''m''
-*French: focus ''m''
+*French: se focaliser sur ''m''
 
 
 ----
+
 ==Latin==
 ===Noun===
 '''focus, [[Wiktionary Appendix:Latin second declension|focī]]''' ''m'' (Diminutive: [[foculus]])
