--- a/wiki/%CE%A3.wikitext
+++ b/wiki/%CE%A3.wikitext
@@ -1,7 +1,11 @@
 ==Greek alphabet==
-*/"siGma/
+σίγμα
+*SAMPA: /s/, /"siGma/
 
 *see [[sigma]]
+
+===See also===
+*[[s]]
 
 === Mathematical notation ===
 
