--- a/wiki/eternity.wikitext
+++ b/wiki/eternity.wikitext
@@ -10,7 +10,8 @@
                                                                                                                                                       
 ===Translations===
 [[Czech]]: [[věčnost]] ''f''
-                                                                                                                                                      
+[[French]]: [[éternité]] ''f''
+
 ===See Also===
 *[[forever]]
 *[[evermore]]
