/* Noun */ replace "kingfish" in def since this is at my local sushi shop and there's plenty of google hits to support it <ハマチ#64153>

--- a/wiki/%E3%83%8F%E3%83%9E%E3%83%81.wikitext
+++ b/wiki/%E3%83%8F%E3%83%9E%E3%83%81.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''ハマチ''' ([[魬]], hamachi)
 
-# young [[yellowtail]].
+# young [[yellowtail]], [[kingfish]]
 
 ===Alternate spelling===
 *[[はまち]]
