--- a/wiki/roof.wikitext
+++ b/wiki/roof.wikitext
@@ -8,5 +8,6 @@
 *French: [[toit]] ''m''
 *Indonesian: [[atap]]
 *[[Russian]]: [[потолок]]
+*Portuguese: [[telhado]] ''m''
 *Slovene: [[streha]] ''f''
 *Swedish: [[tak]] ''n''
