--- a/wiki/eternity.wikitext
+++ b/wiki/eternity.wikitext
@@ -9,8 +9,8 @@
 *[[eternal]]
                                                                                                                                                       
 ===Translations===
-[[Czech]]: [[věčnost]] ''f''
-[[French]]: [[éternité]] ''f''
+*[[Czech]]: [[věčnost]] ''f''
+*[[French]]: [[éternité]] ''f''
 
 ===See Also===
 *[[forever]]
