/* Translations */ +fr <focus#38446>

--- a/wiki/focus.wikitext
+++ b/wiki/focus.wikitext
@@ -19,6 +19,7 @@
 |bgcolor="#FFFFBF" valign=top width=48%|
 {|
 *{{fi}}: [[fokus]], [[polttopiste]]
+*{{fr}}: [[focus]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFBF" valign=top width=48%|
@@ -32,6 +33,7 @@
 |bgcolor="#FFFFBF" valign=top width=48%|
 {|
 *{{fi}}: [[polttopiste]], [[leikkauspiste]]
+*{{fr}}: [[focus]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFBF" valign=top width=48%|
@@ -45,6 +47,7 @@
 |bgcolor="#FFFFBF" valign=top width=48%|
 {|
 *{{fi}}: [[keskittyminen]]
+*{{fr}}: [[attention]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFBF" valign=top width=48%|
