--- a/wiki/blatant.wikitext
+++ b/wiki/blatant.wikitext
@@ -1,6 +1,8 @@
-==Pronunciation ==
+==English==
+===Pronunciation===
 \Bla"tant\
-==Adjective==
+
+===Adjective===
 [[Cf.]]: [[bleat]].
 
 Bellowing, as a calf; bawling; brawling; clamoring;
@@ -11,3 +13,9 @@ disagreeably clamorous; sounding loudly and harshly.
  ''A monster, which the blatant [[beast]] men call''. --[[w:E. Spenser]].
 
  ''Glory, that blatant word, which [[haunt]]s some military minds like the [[bray]] of the [[trumpet]]''.--[[w:W. Irving]].
+
+====translation====
+*[[Russian]]: [[:ru:крикливый|крикливый]] /kriklivi'y/
+
+==[[multilingual associations]]==
+*Russian: '''blatant''' блатная /blatnaya/ ([[criminal]]) [[aunt]]
