--- a/wiki/body.wikitext
+++ b/wiki/body.wikitext
@@ -13,15 +13,17 @@
 *[[Chinese]]: [[身体]] (shēntǐ)
 *[[Dutch]]: [[lichaam]] ''n'' (1), [[corpus]] ''n'' (2), [[koetswerk]] ''n'' (3)
 *[[Finnish]]: [[ruumis]] (1), [[keho]] (1), [[raato]] (''dead body''), [[kokoelma]] (2), [[korpus]] (2, ''in linguistics''), [[elin]] (2, ''of governmental bodies'')
-*[[French]]: [[corps]] ''m'' (1), [[corpus]] ''m'' (2), [[carrosserie]] ''m'' (3)
-*[[German]]: [[Körper]] ''m''
+*[[French]]: [[:fr:corps|corps]] ''m'' (1), [[:fr:corpus|corpus]] ''m'' (2), [[carrosserie]] ''m'' (3)
+*[[German]]: [[:de:Körper|Körper]] ''m''
 *[[Greek]]: (s[o]ma)
+*[[Hebrew]]: [[:he:גוף|גוף]] /guf/
 *[[Indonesian]]: [[tubuh]], [[badan]]
-*[[Italian]]: [[corpo]] ''m''
+*[[Italian]]: [[:it:corpo|corpo]] ''m''
 *[[Japanese]]: [[からだ]] / [[体]] (karada), [[身体]] ([[しんたい]], shintai), [[身]] ([[み]], mi)
 *[[Latin]]: [[corpus]]
 *[[Lithuanian]]: [[kūnas]] ''m'' (1); approxim. [[visuma]] ''f'' (2)
 *[[Low Saxon]]: [[Kropp]] ''m''
+*[[Russian]]: [[:ru:тело|тело]] /telo/
 *[[Spanish]]: [[cuerpo]] ''m'' (1), [[carrocería]] ''f'' (3)
 *Swedish: [[kropp]] ''c'' (1, 2), [[kaross]] ''c'' (3)
 
@@ -30,3 +32,6 @@
 *[[body conscious]]
 
 [[en:body]]
+
+==[[multilingual associations]]==
+*[[Russian]]: [[:ru:не|не]] буди /ne budi/ (do not [[wake]] up) '''body'''
