--- a/wiki/tree.wikitext
+++ b/wiki/tree.wikitext
@@ -17,7 +17,7 @@
 
 ====Translations====
 *Albanian: [[pemë]] ''f''
-*Arabic: [[شَجَرَة]] (ʃáʤarah) ''f'', [[شَجَر]] (ʃáʤar) ''m (collective)'', [[أشْجَار]] (‘aʃʤáːr) ''pl''
+*Arabic: [[شجرة|شَجَرَة]] (ʃáʤarah) ''f'', [[شجر|شَجَر]] (ʃáʤar) ''m (collective)'', [[اشجار|أشْجَار]] (‘aʃʤáːr) ''pl''
 *[[Aymara]]: [[khoka]]
 *[[Basque]]: [[zuhaitz]]
 *[[Breton]]: [[gwez]] ''collective noun'' [[gwezenn]] ''f singular'' (1)
@@ -27,15 +27,18 @@
 *[[Chichewa]]: [[mtengo]]
 *Chinese Characters: [[木]] (mù, shù); [[樹]] (shù, zǔn), [[树]] (shù); [[栻]] (chì)
 *Chinese ([[Mandarin]]): [[树]] / [[樹]] (shù)
+*Croatian: [[stablo]]
 *Czech: [[strom]] ''m''
+*Danish: [[träd]]
+*[[Dyirbal]]: [[yugu]] ''(noun class IV)'', [[yuguɖaran]] ''dual'', [[yugu-yugu]] ''pl''
 *Dutch: [[boom]] ''m''
 *[[Esperanto]]: [[arbo]]
-*[[Finnish]]: [[puu]] (1, 3, 5, 6)
+*[[Finnish]]: [[puu]] (1,3,5,6)
 *French: [[arbre]] ''m''
 *[[Frisian]]: [[beam]]
 *Galician: [[árbore]] ''f''
 *German: [[Baum]] ''m''
-*Greek: [[δέντρο]] (dhéndro) ''n''
+*Greek: [[δένδρον]] (dhéndron) ''n''
 *[[Guaraní]]: [[yvyra]]
 *Hebrew: [[עץ]] (‛ēts) ''m''
 *Hungarian: [[fa]]
@@ -51,13 +54,13 @@
 *[[Manchu]]: ([[moo]])
 *[[Nahuatl]]: [[cuahuitl]]
 *Norwegian: [[tre]] ''n''
-*[[Persian]]:  [[دِرَخت]] (deræxt)
+*[[Persian]]: [[درخت|دِرَخت]] (deræxt)
 *Polish: [[drzewo]] ''n''
 *Portuguese: [[árvore]] ''f''
-*[[Quechua]]: [[sacha]]
+*[[Quechua]]: [[sacha]], [[sachakuna]] ''pl''
 *Romanian: [[arbore]] ''m'', [[copac]] ''m'', [[pom]] ''m''
-*Russian: [[дерево]] (dérevo) ''n'',  [[деревья]] (derév'ja) ''pl''
-*[[Samoan]]: [[lā'au]]
+*Russian: [[дерево]] (dérevo) ''n'', [[деревья]] (derév'ja) ''pl''
+*[[Samoan]]: [[lā’au]]
 *[[Sanskrit]]: [[taru]], [[taruu]], [[daaru]], [[druma]]
 *Serbian: [[дрво]] (drvo)
 *[[Sichuanese]]: [[树]] (sō)
@@ -70,14 +73,16 @@
 *[[Sotho]]: [[sefate]]
 *Spanish: [[árbol]] ''m''
 *[[Swahili]]: [[mti]] ''sg'', [[miti]] ''pl''
-*Swedish: [[träd]] ''n'' (1, 5, 6)
+*Swedish: [[träd]] ''n'' (1,5,6)
 *[[Tagalog]]: [[puno]]
 *[[Tamil]]: [[மரம்]] (maram)
-*[[Tartar]]: [[агач]] (agach)
+*[[Tatar]]: [[агач]] (agač)
 *[[Tajik]]: [[дарахт]] (darakht)
 *[[Teochew]]: [[树]] (ciudiangdang)
 *Thai: [[ต้นไม้]] (tonmai)
+*[[Tok Pisin]]: [[diwai]]
 *[[Tupinambá]]: [[ybyrá]]
+*Turkish: [[ağaç]]
 *Ukrainian: [[дерево]] (derevo)
 *Vietnamese: [[cây]]
 *Welsh: [[pren]], [[coeden]], [[colfen]] (colloquial)
