--- a/wiki/animal.wikitext
+++ b/wiki/animal.wikitext
@@ -32,7 +32,7 @@
 *Dutch: [[dier]] ''n'', [[beest]] ''n''
 *[[Esperanto]]: [[besto]]
 *Finnish: [[eläin]], [[elukka]] (''colloquial'')
-*French: animal ''m'', [[bête]] ''f''
+*French: [[fr:animal]] ''m'', [[fr:bête]] ''f''
 *German: [[Tier#German|Tier]] ''n''
 *Hebrew: [[בעל חיים]] ''m''
 *Icelandic: [[dýr]] ''n''
