removed nonsense and put in some real content <good morning#64276>

--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -1,3 +1,10 @@
-'''I love meidan''' 
-She is the love of my life and always will be. Shalom baby.
-This is made by bradley D. I want everybody in the world to know that I love this girl. I LOVE YOU BABY. I REALLY DO
+===Expression===
+'''good morning'''
+
+# said when meeting somebody for the first time in the morning
+
+====Translations====
+*Dutch: [[goeiemorgen]]
+*French: [[bon matin]]
+*German: [[gutenmorgen]]
+*Japanese: ohayo
