--- a/wiki/%E8%BE%A8.wikitext
+++ b/wiki/%E8%BE%A8.wikitext
@@ -1,5 +1,5 @@
 * '''Alternate forms''':
-** [[弁]] (Japanese simplified form which also covers [[辯]], [[瓣]]<!-- and possibly [[辧]]-->)
+** [[弁]] (Japanese simplified form which also covers [[辯]], [[瓣]], [[辧]])
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 160''': [[Wiktionary:Chinese radical index 辛|辛]]+9 strokes
 
