improve alt forms section <辧#28578>

--- a/wiki/%E8%BE%A7.wikitext
+++ b/wiki/%E8%BE%A7.wikitext
@@ -1,4 +1,6 @@
-* '''Alternate form''': [[辨]]
+* '''Alternate forms''':
+** [[弁]] (Japanese simplified form which also covers [[辯]], [[瓣]], [[辨]])
+** [[辨]]<!-- relationship other than zh or ja trad<->simp -->
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 160''': [[Wiktionary:Chinese radical index 辛|辛]]+9 strokes
 
