--- a/wiki/%E8%BE%AF.wikitext
+++ b/wiki/%E8%BE%AF.wikitext
@@ -1,6 +1,6 @@
 * '''Alternate forms''':
 ** [[辩]] (Chinese simplified form)
-** [[弁]] (Japanese simplified form which also covers [[辨]], [[瓣]]<!-- and possibly [[辧]]-->)
+** [[弁]] (Japanese simplified form which also covers [[辨]], [[瓣]], [[辧]])
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 160''': [[Wiktionary:Chinese radical index 辛|辛]]+14 strokes
 
