/* See also */ <ada#40679>

--- a/wiki/ADA.wikitext
+++ b/wiki/ADA.wikitext
@@ -8,7 +8,7 @@
 ===See also===
 *[[ADA]]
 *[[w:Ada_programming_language|Wikipedia article on the programming language Ada]]
-*[http://en.wikibooks.org/wiki/Programming:Ada|Wikibook "Programming:Ada"]
+*[[http://en.wikibooks.org/wiki/Programming:Ada|Wikibook "Programming:Ada"]]
 
 ----
 
