--- a/wiki/gay.wikitext
+++ b/wiki/gay.wikitext
@@ -169,7 +169,7 @@ However, the use of '''gay''' as a noun seems no different from any other noun a
 *Bulgarian: [[гей]]
 *Finnish: [[homo#Finnish|homo]], [[homoseksuaali]] (''gender-neutral''), gay, [[gei]] (''urban colloquial'')
 *French: gai, gay ''m'', [[homo]] ''m'', [[lesbienne]] ''f'' (''female'')
-*German: Homosexueller (''gender-neutral''), [[Schwuler]] ''m'', [[Lesbierin]] ''f'' (formal), [[Lesbe]] ''f'' (''urban colloquial'')
+*German: [[Homosexuelle(r)]] (''gender-neutral''), [[Schwuler]] ''m'', [[Lesbierin]] ''f'' (formal), [[Lesbe]] ''f'' (''urban colloquial'')
 *Hungarian: [[meleg]]
 *Italian: gay ''m'', [[lesbica]] ''f'' (''female'')
 *Romanian: [[homosexual]] ''m'', [[homo]] ''m'', [[poponar]] ''m'', [[lesbiană]] ''f'' (''female''), [[lesbi]] ''f'' (''female'')
