/* Tranlations */ <exclamation mark#36542>

--- a/wiki/exclamation_mark.wikitext
+++ b/wiki/exclamation_mark.wikitext
@@ -11,6 +11,7 @@
 
 ====Tranlations====
 *Chinese: [[感叹号]], [[感嘆号]] (gantanhao)
+*Dutch: [[uitroepteken]]
 *Finnish: [[huutomerkki]]
 *Italian: [[punto esclamativo]] ''m''
 *Japanese: [[感嘆符]] (kantanfu)
