--- a/wiki/parenthesis.wikitext
+++ b/wiki/parenthesis.wikitext
@@ -8,6 +8,7 @@
 *[[bracket]], [[round bracket]]
 
 ====Translations====
+*Dutch: [[haakje]] (''plural'' [[haakjes]])
 *Finnish: [[sulku]] (''plural'' [[sulkeet]])
 *French: [[parenthèse]] ''f'' ('''in parentheses:''' entre parenthèses)
 *Italian: [[parentesi]] ''f'' (''plural'': parentesi)
