german version <signal#36930>

--- a/wiki/signal.wikitext
+++ b/wiki/signal.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Pronunciation===
 *[[w:AHD|AHD]]: sĭg'nəl
 *[[w:IPA|IPA]]: /ˈsɪgn(ə)l/
@@ -18,9 +19,18 @@
 
 ====Translations====
 *Chinese Characters: [[旌]]
+*German: [[Signal]]
 *Lithuanian: [[signalizuoti]]
 *Russian: [[сигнализировать]]
 
 ===Related terms===
 *[[signal box]]
 *[[signalman]]
+
+==German==
+===Noun===
+'''Signal''' n.
+# An indication given to another person.
+
+====Translations====
+*English: [[signal]]
