--- a/wiki/%E8%BE%A1.wikitext
+++ b/wiki/%E8%BE%A1.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#recrimination
-*# wrangling
-
+*#[[recrimination]]
+*# [[wrangling]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[へん]] (hen), [[べん]] (ben)
