--- a/wiki/helium.wikitext
+++ b/wiki/helium.wikitext
@@ -19,12 +19,12 @@
 *[[Arabic]]: [[هيليوم]]
 *[[Armenian]]: [[heliumu]]
 *[[Basque]]: [[helioa]]
-*[[Belarussian]]: [[гелій]]
+*[[Belarussian]]: [[гелій]] (geliy)
 *[[Bosnian]]: [[helij]]
 *[[Breton]]: [[heliom]] ''m''
-*[[Bulgarian]]: [[хелий]] ''m''
+*[[Bulgarian]]: [[хелий]] ''m'' (heliy)
 *[[Catalan]]: [[heli]]
-*[[Chinese]]: [[氦]]
+*[[Chinese]]: [[氦]] (hài)
 *[[Cornish]]: [[helyum]]
 *[[Croatian]]: [[helij]]
 *[[Czech]]: helium
@@ -52,24 +52,24 @@
 {|
 *[[Japanese]]: [[ヘリウム]] (heriumu)
 *[[Kashmiri]]: [[Él]]
-*[[Kazakh]]: [[гелий]]
+*[[Kazakh]]: [[гелий]], [[geliy]]
 *[[Latin]]: helium
 *[[Latvian]]: [[hēlijs]]
 *[[Lithuanian]]: [[helis]]
 *[[Luxembourgish]]: helium
-*[[Macedonian]]: [[хелиум]]
+*[[Macedonian]]: [[хелиум]] (helium)
 *[[Malay]]: [[helium]]
 *[[Maltese]]: [[Ħiljum]]
 *[[Manx]]: [[hailium]]
 *[[Modern Greek]]: [[ήλιο]] ''n''
-*[[Mongolian]]: [[гели]]
+*[[Mongolian]]: [[гели]] (geli)
 *[[Norwegian]]: helium
 *[[Polish]]: [[hel]] ''m''
 *[[Portuguese]]: [[hélio]] ''m''
 *[[Romanian]]: [[heliu]] ''n''
-*[[Russian]]: [[гелий]] ''m''
+*[[Russian]]: [[гелий]] ''m'' (gelii)
 *[[Scottish Gaelic]]: [[hèiliam]]
-*[[Serbian]]: [[хелијум]]
+*[[Serbian]]: [[хелијум]]/[[helijum]]
 *[[Slovak]]: [[hélium]]
 *[[Slovenian]]: [[helij]]
 *[[Spanish]]: [[helio]] ''m''
@@ -77,8 +77,8 @@
 *[[Tajik]]: [[geli\']]
 *[[Thai]]: [[ฮีเลียม]]
 *[[Turkish]]: [[helyum]]
-*[[Ukrainian]]: [[гелій]]
-*[[Uzbekistani]]: [[гелий]]
+*[[Ukrainian]]: [[гелій]] (geliy)
+*[[Uzbekistani]]: [[гелий]], [[geliy]]
 *[[Vietnamese]]: [[heli]]
 *[[Welsh]]: [[heliwm]]
 |}
