--- a/wiki/%CE%AE%CE%BB%CE%B9%CE%BF.wikitext
+++ b/wiki/%CE%AE%CE%BB%CE%B9%CE%BF.wikitext
@@ -1,25 +1,5 @@
-===Ετυμολογία===
-Απο το αρχαίο ελληνικό '''άρσην''' ή '''άρσεν''' , συγγενές προς το ζενδικό ''arshan''=ανδρας
+==Greek==
 
-===Επίθετο===
+*Romanization: ilio, &iacute;lio
 
-===Παράγωγες μορφές===
-
-===Μεταφράσεις===
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*Αγγλικά: [[helium]]
-*Αζερμπαϊτζανικά:
-*Αλβανικά/Αρβανίτικα: [[helium]]
-*Αραβικά: [[هيليوم]]
-*Αστουριανά:
-*Αφρικανολλανδικά: [[helium]]
-*Βαλλωνικά:
-*Βασκικά: [[helioa]]
-*Βιετναμέζικά: [[heli]]
-*Βοσνιακά (Σκλαβική): [[helij]]
-*Βουλγαρικά: [[хелий]] (helii) 
-*Γαλικιακά: [[helio]]
-*Γαλλικά: [[hélium%
+*English: [[Helium]]
