--- a/wiki/encyclopedia.wikitext
+++ b/wiki/encyclopedia.wikitext
@@ -36,6 +36,7 @@ Latin ''encyclopaedia'' from Greek ''en'' + ''kyklo(s)'' circle + ''paideia'' ch
 *Italian: [[enciclopedia]] ''f''
 *Japanese: [[大辞典]] (だいじてん, dai-jiten)
 *Latin: [[encyclopaedia]]
+*Latvian: [[enciklopēdija]] ''f''
 *Lithuanian: [[enciklopedija]] ''f''
 *Polish: [[encyklopedia]] ''f''
 *Portuguese: [[enciclopédia]] ''f''
