/* Translations */  +lv <Wiktionary#2234592>

--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -29,6 +29,7 @@ From the [[Hawaiian]] [[pidgin]] word '''[[wiki]]''', from English '''[[quick]]'
 *Japanese: [[ウィクショナリー]] (Wikushonarī) <!-- "latin small letter i with macron" works? -->
 *Kyerepon: [[Wikishinari]]
 *Latin: [[Victionarium]]
+*Latvian: [[Wikivārdnīca]] ''f'', [[Wikinīca]] ''f''
 *Polish: [[Wikisłownik]]
 *Portuguese: [[Wikcionário]] [[:pt:Wikcionário|pt]]
 *[[Romanica]]: [[Wiktionario]]
