--- a/wiki/mercury.wikitext
+++ b/wiki/mercury.wikitext
@@ -111,6 +111,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*[[Dutch]]: [[Mercurius]] ''m''
 *Finnish: [[Merkurius]]
 *French: [[Mercure]] ''m''
 *Italian: [[Mercurio]] ''m''
@@ -121,6 +122,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 *Lithuanian: [[Merkurijus]] ''m''
 *Portuguese: [[Mercúrio]] ''m''
 *Spanish: [[Mercurio]] ''m''
+*[[Vietnamese]]: [[Thần]] [[Méc-cua]]
 |}
 |}
 
@@ -129,6 +131,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*[[Dutch]]: [[Mercurius]] ''f''
 *Finnish: [[Merkurius]]
 *French: (la [[planète]]) [[Mercure]] ''f''
 *Interlingua: (le [[planeta]]) [[Mercurio]]
@@ -141,6 +144,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 *Lithuanian: [[Merkurijus]] ''m''
 *Portuguese: (o [[planeta]]) [[Mercúrio]] ''m''
 *Spanish: (el [[planeta]]) [[Mercurio]] ''m''
+*[[Vietnamese]]: [[sao Thủy]]
 |}
 |}
 
