/* See also */ encyclopedia -> wikipedia <quiche#64248>

--- a/wiki/quiche.wikitext
+++ b/wiki/quiche.wikitext
@@ -3,9 +3,10 @@
 # A [[pie]] made primarily of [[egg]]s and [[cream]] in a [[pastry]] [[crust]]. Other ingredients such as [[chopped meat]] or [[vegetable]]s are often added to the eggs before the quiche is [[bake]]d.
 
 ===See also===
-* [[w:Quiche|Encyclopedia article quiche]]
+* [[w:Quiche|Wikipedia article on quiche]]
 
 ----
+
 ==French==
 ===Noun===
 '''quiche''' ''f''
