--- a/wiki/busybody.wikitext
+++ b/wiki/busybody.wikitext
@@ -10,4 +10,6 @@
 *French: [[touche-à-tout]]
 *German: [[Wichtigtuer]]
 *Hungarian: [[fontoskodó]], [[two spoones in every soup]]
-[[nl:Busybody]]
+*[[Vietnamese]]: [[người]] [[bao biện]]
+
+[[nl:busybody]]
