Minor change to image caption. <striated#64298>

--- a/wiki/striated.wikitext
+++ b/wiki/striated.wikitext
@@ -1,4 +1,4 @@
-[[Image:Pfstriations.jpg|frame|Striations in a [[plagioclase]] [[feldspar]]]]
+[[Image:Pfstriations.jpg|frame|Striations in a [[plagioclase]] [[feldspar]] (magnified)]]
 ===Pronunciation===
 
 :Stri' a ted
