nước instead ò nươc <water#3749998>

--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -104,7 +104,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *Turkish: [[su]]
 *[[Tzotzil]]: [[voʻ]]
 *[[Urdu]]: [[آب]] (aab)
-*Vietnamese: [[nươc]]
+*Vietnamese: [[nước]]
 *[[Volapük]]: [[vat]]
 *Welsh: [[dŵr]]
 *[[Zulu]]: [[amanzi]]
