Fixed messed up link... <anorthite#64294>

--- a/wiki/anorthite.wikitext
+++ b/wiki/anorthite.wikitext
@@ -7,7 +7,7 @@
 :Greek "less than straight, not perpendicular" - a reference to the odd angles at which crystals grow.
 
 ===Noun===
-#A [[plagioclase]] [[feldspar]], the final member of the Albite-Anorthite [[solid solution]] series. Anorthite is very rare on Earth, but abundant in moon [[rock]]s.  This is because Anorthite weathers rapidly to [[clay]] [[minerals]] under atmospheric conditions. Good crystals have been found in lava-digested limestone blocks erupted from Mount Vesuvius.
+#A [[plagioclase]] [[feldspar]], the final member of the Albite-Anorthite [[solid solution]] series. Anorthite is very rare on Earth, but abundant in moon [[rock]]s.  This is because Anorthite weathers rapidly to [[clay]] [[mineral]]s under atmospheric conditions. Good crystals have been found in lava-digested limestone blocks erupted from Mount Vesuvius.
 
 === Chemical composition ===
 *Calcium aluminum silicate, <math>CaAlSi_3O_8</math>
