--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -4,7 +4,7 @@ Derived from the name of Mark "Stip" Stypulkowski.
 
 *Mark continually attempts to sing as a [[baritone]], but cannot seem to match [[pitch]]
 
-*The lowest form of a nerd, geek, or idiot
+*The lowest form of a [[nerd]], [[geek]], or [[idiot]]
 
 *Created by [http://www.xanga.com/stoner311 Matt Stone] on November 11, 2004 in response a comment made by Tim Plunkett, a web designer (see examples of his work [http://www.donaldpbeck.com here] and [http://www.vanhornmetz.com here]).
 
