/* [[Intransitive]] Verb */ <stip#64201>

--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -13,3 +13,7 @@ Derived from the name of Mark "Stip" Stypulkowski.
 
 # To make terrible, off-key attempts to sing
 #: ''He thinks he can sing, but in truth he can only '''stip'''''.
+
+#: To be a Stip
+
+#: To be a complete and utter faggot
