/* [[Intransitive]] Verb */ <stip#64201>

--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -14,5 +14,5 @@ Derived from the name of Mark "Stip" Stypulkowski.
 # To make terrible, off-key attempts to sing
 #: ''He thinks he can sing, but in truth he can only '''stip'''''.
 
-2: To be a Stip
-3: To be a complete and utter faggot
+*To be a Stip
+*To be a complete and utter faggot
