/* [[Intransitive]] Verb */ <stip#64201>

--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -15,4 +15,4 @@ Derived from the name of Mark "Stip" Stypulkowski.
 #: ''He thinks he can sing, but in truth he can only '''stip'''''.
 
 *To be a Stip
-*To be a complete and utter faggot
+*To be a complete and utter [[faggot]]
