/* Latin */ Declension. <formica#39285>

--- a/wiki/formica.wikitext
+++ b/wiki/formica.wikitext
@@ -34,6 +34,35 @@
 *[[formicinus]]
 *[[formicosus]]
 
+====Declension====
+First declension.
+
+{| cellpadding="5" border="1"
+! ''case \ #''
+! ''F.''
+! ''FF.''
+|-
+! ''Nominative''
+| form&#299;ca
+| form&#299;cae
+|-
+! ''Genitive''
+| form&#299;cae
+| form&#299;c&#257;rum
+|-
+! ''Dative''
+| form&#299;cae
+| form&#299;c&#299;s
+|-
+! ''Accusative''
+| form&#299;cam
+| form&#299;c&#257;s
+|-
+! ''Ablative''
+| form&#299;c&#257;
+| form&#299;c&#299;s
+|}
+
 ===See also===
 *[[w:formica|Wikipedia article on Formica]]
 
