fi modified <beast#39179>

--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -21,7 +21,7 @@ From Latin [[bestia]] : animal, beast
 {|
 <!--languages from A to I go here-->
 *Chinese: [[四足兽]]
-*Finnish: [[peto]]
+*Finnish: [[eläin]], [[selkärankainen]] (''vertebrate'')
 *French: [[bête]] ''f''
 *Italian: [[bestia]] ''f''
 |}
@@ -40,7 +40,7 @@ From Latin [[bestia]] : animal, beast
 {|
 <!--languages from A to I go here-->
 *Chinese: [[凶暴]][[而]][[残忍]]的人
-*Finnish: [[hirviö]]
+*Finnish: [[hirviö]], [[peto]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
