--- a/wiki/wander.wikitext
+++ b/wiki/wander.wikitext
@@ -21,6 +21,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[vaeltaa]], [[vaellella]], [[samota]], [[harhailla]], [[hortoilla]]
 *French: [[errer]]
 *Italian: [[errare]]
 |}
@@ -37,6 +38,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[tehdä huorin]] (''religious''), [[tehdä aviorikos]], [[olla]] [[uskoton]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -51,6 +53,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[kierrellä]], [[kaarrella]], [[vaeltaa]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -65,6 +68,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[harhailla]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
