--- a/wiki/memory.wikitext
+++ b/wiki/memory.wikitext
@@ -23,6 +23,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Finnish: [[muisti]]
 *Italian: [[memoria]] ''f''
 *Latin: [[memoria]] ''f''
 *Lithuanian: [[atmintis]] ''f''
@@ -40,6 +41,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Finnish: [[muistikuva]], [[muisto]], [[muisti]]
 *Italian: [[memoria]] ''f''
 *Latin: [[memoria]] ''f''
 |}
@@ -56,6 +58,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Finnish: [[muisti]]
 *Italian: [[memoria]] ''f''
 *Latin: [[memoria]] ''f''
 *Lithuanian: [[atmintinė]] ''f''
@@ -73,6 +76,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Finnish: [[muisti]]
 *Italian: [[memoria]] ''f''
 *Latin: [[memoria]] ''f''
 |}
@@ -84,8 +88,7 @@
 |}
 |}
 
-====Translations====
-*Finnish: [[muisti]]
+=====Translations to be checked=====
 *French: [[mémoire]] (gender?) (1, 2, 3, 4)
 
 ===Related terms===
