--- a/wiki/inertia.wikitext
+++ b/wiki/inertia.wikitext
@@ -16,6 +16,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[inertia]], [[hitaus]]
 *French: [[inertie]] ''f''
 |}
 | width=1% |
@@ -31,6 +32,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[vastahakoisuus]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
