--- a/wiki/record.wikitext
+++ b/wiki/record.wikitext
@@ -30,6 +30,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[tallenne]]
 *French: [[enregistrement]] ''m''
 |}
 | width=1% |
@@ -46,6 +47,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[ennätys]]
 *French: [[record]] ''m''
 |}
 | width=1% |
@@ -62,6 +64,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[äänilevy]], [[LP-levy]], [[levy]]
 *French: [[disque]] ''m''
 *Italian: [[disco#Italian|disco]] ''m''
 |}
@@ -79,6 +82,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[levy]]
 *French: [[disque]] ''m''
 *Italian: [[disco#Italian|disco]] ''m''
 |}
@@ -94,9 +98,10 @@
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
-*French: [[enregistrement]] ''m''
 {|
 <!--languages from A to I go here-->
+*Finnish: [[tietue]]
+*French: [[enregistrement]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -122,6 +127,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[tallentaa]], [[taltioida]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -136,6 +142,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[tallentaa]], [[nauhoittaa]], [[äänittää]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
