--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -49,9 +49,9 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *Danish: vand
 *Dutch: water ''n''
 *[[Esperanto]]: [[akvo]] 
-*Estonian: [[vesi]]
+*Estonian: [[vesi#Estonian|vesi]]
 *[[Faeroese]]: [[vatn]]
-*Finnish: [[vesi]]
+*Finnish: [[vesi#Finnish|vesi]]
 *[[French]]: [[eau]] ''f''
 *[[Frisian]]: [[wetter]]
 *[[Galician]]: [[auga]] ''f'', [[agua]] ''f''
@@ -117,6 +117,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[vesi]], [[mineraalivesi]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -131,6 +132,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[kylpy]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -145,6 +147,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[vesi#Finnish|vesi]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -160,6 +163,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[vedet]] ''pl''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -174,6 +178,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[vesi#Finnish|vesi]], [[vedet]] ''pl''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
