--- a/wiki/scientist.wikitext
+++ b/wiki/scientist.wikitext
@@ -4,9 +4,11 @@
 
 #One whose activities make use of the [[scientific method]] to answer questions regarding the measurable universe.  A scientist may be involved in original [[research]], or make use of the results of the research of others.
 
-==Translations=
-*[[Lithuanian]]: [[mokslininkas]] ''m'', [[mokslininkė]] ''f''
-*[[Persian]]: [[دانشمند]] (daneshmand)
+====Translations====
+
+*Finnish: [[tieteilijä]] (1), [[tiedemies]] (1)
+*Lithuanian: [[mokslininkas]] ''m'', [[mokslininkė]] ''f''
+*Persian: [[دانشمند]] (daneshmand)
 
 ====Related terms====
 *[[science]]
