Finnish adjective: etymology, derived, related <peloton#64189>

--- a/wiki/peloton.wikitext
+++ b/wiki/peloton.wikitext
@@ -1,9 +1,30 @@
 ==English==
 
-===Noun===
+===Etymology===
+From French ''Peloton'': pellet
 
+===Noun===
 
 #The main group of cyclist formed during a cycling road race.
 
+----
+
+==Finnish==
+
 ===Etymology===
-French ''Peloton'': pellet
+
+From ''[[pelko]]'' + ''[[-ton#Finnish|-ton]]''.
+
+===Adjective===
+'''peloton'''
+
+# [[fearless]], [[daring]]
+
+===Derived words===
+*[[pelottomasti]]
+*[[pelottomuus]]
+
+===Related words===
+*[[pelko]]
+*[[pelokas]]
+*[[pelätä]]
