--- a/wiki/continental.wikitext
+++ b/wiki/continental.wikitext
@@ -6,8 +6,8 @@
 #:''continental drift''
 #In the main part of a country or region, as opposed to on one of its islands.
 #:''continental Europe''
-#(''especially British'') Characteristic of the style of continental Europe, as opposed to British.
-#:''a continental café''
+#(''especially in the UK'') Characteristic of the style of continental Europe, as opposed to British.
+#:''continental breakfast''
 
 ====Synonyms====
 *(''in the main part of a country or region, as opposed to on one of its islands''): [[mainland]]
@@ -59,3 +59,10 @@
 <!--Put translations for languages from J to Z here-->
 |}
 |}
+
+===Derived terms===
+*[[continental breakfast]]
+*[[continental drift]]
+*[[continental plate]]
+*[[continental quilt]]
+*[[continental shelf]]
