modified def; noted that "eiderdown" is not a synonym (see comment) <duvet#50266>

--- a/wiki/duvet.wikitext
+++ b/wiki/duvet.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 '''duvet'''
 
-# (''Britain'', ''NZ'') A padded blanket
+# (''Britain'', ''NZ'') A thick, padded [[quilt]] used instead of [[blanket]]s.
 
 ====Synonyms====
 *[[doona]] (''Australia'')<!-- recapitalise if it's still a trademark maybe -->
@@ -14,4 +14,4 @@
 *[[continental quilt]]
 
 ===See also===
-*[[eiderdown]]<!-- or is this a synonym? -->
+*[[eiderdown]]<!-- not a synonym: an eiderdown is used with blankets; a duvet is not -->
