--- a/wiki/duvet.wikitext
+++ b/wiki/duvet.wikitext
@@ -1,4 +1,7 @@
 ==English==
+===Etymology===
+French ''duvet'', having the same meaning, and also meaning a [[down]]-filled sleeping bag; originally meaning "down" (soft, fine feathers)
+
 ===Pronunciation===
 *do͞o'vā, /ˈduːveɪ/, /<tt>"du:veI</tt>/
 *:[[Rhymes:English:-uːveɪ|Rhymes: -uːveɪ]]
