+fr: entry, and referred to it in en: etym <duvet#50266>

--- a/wiki/duvet.wikitext
+++ b/wiki/duvet.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-French ''duvet'', having the same meaning, and also meaning a [[down]]-filled sleeping bag; originally meaning "down" (soft, fine feathers)
+French ''duvet'' (see French entry on this page)
 
 ===Pronunciation===
 *do͞o'vā, /ˈduːveɪ/, /<tt>"du:veI</tt>/
@@ -18,3 +18,13 @@ French ''duvet'', having the same meaning, and also meaning a [[down]]-filled sl
 
 ===See also===
 *[[eiderdown]]<!-- not a synonym: an eiderdown is used with blankets; a duvet is not -->
+
+----
+==French==
+===Noun===
+'''duvet''' ''m''
+
+#[[down]] (''soft, fine feathers'')
+#down, [[fuzz]] (''on face, peach, etc'')
+#(down-filled) [[sleeping bag]]
+#duvet, [[continental quilt]]
