--- a/wiki/duvet.wikitext
+++ b/wiki/duvet.wikitext
@@ -28,3 +28,4 @@ French ''duvet'' (see French entry on this page)
 #down, [[fuzz]] (''on face, peach, etc'')
 #(down-filled) [[sleeping bag]]
 #duvet, [[continental quilt]]
+#(''Belgium, Switzerland'') [[eiderdown]]
