--- a/wiki/duvet.wikitext
+++ b/wiki/duvet.wikitext
@@ -22,7 +22,7 @@ French ''duvet'' (see French entry on this page)
 ----
 ==French==
 ===Noun===
-'''duvet''' ''m''
+'''duvet''' ''m'' (''[[countable]] and [[uncountable]]''; ''plural'' '''duvets''')
 
 #[[down]] (''soft, fine feathers'')
 #down, [[fuzz]] (''on face, peach, etc'')
