added nl meaning, having DOUBTS about the English meaning!!! <stip#64201>

--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -16,3 +16,10 @@ Derived from the name of Mark "Stip" Stypulkowski.
 
 *To be a Stip
 *To be a complete and utter [[faggot]]
+
+
+==Dutch==
+===Noun===
+'''stip'''
+
+# [[dot]]
