fixed incorrect IPA; dewikified languages <helium#28641>

--- a/wiki/helium.wikitext
+++ b/wiki/helium.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 === Pronunciation ===
-*[[w:IPA|IPA]]: /'Hilɪʌm/
-====Hyphenation====
+*[[w:IPA|IPA]]: /'hilɪʌm/
+===Hyphenation===
 :he&middot;li&middot;um
 === Noun ===
 '''helium''', symbol '''He'''
@@ -15,72 +15,72 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Afrikaans]]: helium
-*[[Albanian]]: helium
-*[[Arabic]]: [[هيليوم]]
-*[[Armenian]]: [[heliumu]]
+*Albanian: helium
+*Arabic: [[هيليوم]]
+*Armenian: [[heliumu]]
 *[[Basque]]: [[helioa]]
-*[[Belarussian]]: [[гелій]] (geliy)
-*[[Bosnian]]: [[helij]]
+*Belarussian: [[гелій]] (geliy)
+*Bosnian: [[helij]]
 *[[Breton]]: [[heliom]] ''m''
-*[[Bulgarian]]: [[хелий]] ''m'' (heliy)
+*Bulgarian: [[хелий]] ''m'' (heliy)
 *[[Catalan]]: [[heli]]
-*[[Chinese]]: [[氦]] (hài)
+*Chinese: [[氦]] (hài)
 *[[Cornish]]: [[helyum]]
-*[[Croatian]]: [[helij]]
-*[[Czech]]: helium
-*[[Danish]]: helium
-*[[Dutch]]: helium ''n''
-*[[Esperanto]]: [[helio]] or [[heliumo]] ???
-*[[Estonian]]: [[heelium]]
+*Croatian: [[helij]]
+*Czech: helium
+*Danish: helium
+*Dutch: helium ''n''
+*[[Esperanto]]: [[helio]] ''or'' [[heliumo]] ???
+*Estonian: [[heelium]]
 *[[Faroese]]: helium
 *[[Finnish]]: helium
-*[[French]]: [[hélium]] ''m''
+*French: [[hélium]] ''m''
 *[[Frisian]]: helium
 *[[Friulian]]: [[eli]]
 *[[Galician]]: [[helio]]
 *[[Georgian]]: [[ჰელიუმი]]
-*[[German]]: [[Helium]] ''n''
-*[[Hebrew]]: [[הליום]]
-*[[Hungarian]]: [[hélium]]
-*[[Icelandic]]: [[helín]]
+*German: Helium ''n''
+*Greek, Modern: [[ήλιο]] ''n''
+*Hebrew: [[הליום]]
+*Hungarian: [[hélium]]
+*Icelandic: [[helín]]
 *[[Interlingua]]: helium
-*[[Irish]]: [[héiliam]]
-*[[Italian]]: [[elio]] ''m''
+*Irish: [[héiliam]]
+*Italian: [[elio]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Japanese]]: [[ヘリウム]] (heriumu)
+*Japanese: [[ヘリウム]] (heriumu)
 *[[Kashmiri]]: [[Él]]
 *[[Kazakh]]: [[гелий]], [[geliy]]
-*[[Latin]]: helium
-*[[Latvian]]: [[hēlijs]]
-*[[Lithuanian]]: [[helis]]
+*Latin: helium
+*Latvian: [[hēlijs]]
+*Lithuanian: [[helis]]
 *[[Luxembourgish]]: helium
-*[[Macedonian]]: [[хелиум]] (helium)
+*Macedonian: [[хелиум]] (helium)
 *[[Malay]]: [[helium]]
 *[[Maltese]]: [[Ħiljum]]
 *[[Manx]]: [[hailium]]
-*[[Modern Greek]]: [[ήλιο]] ''n''
-*[[Mongolian]]: [[гели]] (geli)
-*[[Norwegian]]: helium
-*[[Polish]]: [[hel]] ''m''
-*[[Portuguese]]: [[hélio]] ''m''
-*[[Romanian]]: [[heliu]] ''n''
-*[[Russian]]: [[гелий]] ''m'' (gelii)
+*Mongolian: [[гели]] (geli)
+*Norwegian: helium
+*Polish: [[hel]] ''m''
+*Portuguese: [[hélio]] ''m''
+*Romanian: [[heliu]] ''n''
+*Russian: [[гелий]] ''m'' (gelii)
 *[[Scottish Gaelic]]: [[hèiliam]]
-*[[Serbian]]: [[хелијум]]/[[helijum]]
-*[[Slovak]]: [[hélium]]
-*[[Slovenian]]: [[helij]]
-*[[Spanish]]: [[helio]] ''m''
-*[[Swedish]]: helium ([[:sv:helium|^]])
+*Serbian: [[хелијум]]/[[helijum]]
+*Slovak: [[hélium]]
+*Slovenian: [[helij]]
+*Spanish: [[helio]] ''m''
+*Swedish: helium
 *[[Tajik]]: [[geli\']]
 *[[Thai]]: [[ฮีเลียม]]
-*[[Turkish]]: [[helyum]]
-*[[Ukrainian]]: [[гелій]] (geliy)
-*[[Uzbekistani]]: [[гелий]], [[geliy]]
-*[[Vietnamese]]: [[heli]]
-*[[Welsh]]: [[heliwm]]
+*Turkish: [[helyum]]
+*Ukrainian: [[гелій]] (geliy)
+*[[Uzbek]]: [[гелий]], [[geliy]]
+*Vietnamese: [[heli]]
+*Welsh: [[heliwm]]
 |}
 |}
 
