corrected pronunciation :) (IPA was wrong); cleaned up <pronunciation#3244>

--- a/wiki/pronunciation.wikitext
+++ b/wiki/pronunciation.wikitext
@@ -3,12 +3,17 @@
 From Latin '''[[pronuntiatio]]''', noun of action from perfect passive participle '''[[pronuntiatus]]''', from verb ''[[pronuntiare]]'', ''[[proclaim]]'', from '''[[pro-]]''' ''for'' + '''[[nuntiare]]''' ''announce''.
 
 ===Pronunciation===
-:[[International Phonetic Alphabet|IPA]]: /proˌnʌnsiˈeiʃʌn/
+*[[IPA]]: /prəʊˌnʌnsɪˈeɪʃən/ ''or'' /prəˌnʌnsɪˈeɪʃən/
 
 ===Noun===
-#the way words are made to sound when spoken.
+'''pronunciation''' (''[[uncountable]]'')
+
+#(''countable'') The way words are made to sound when spoken.
+#:''What is the correct pronunciation of "hiccough"?''
+#:''His Italian pronunciation is terrible.''
 
 ====Translations====
+
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -34,7 +39,7 @@ From Latin '''[[pronuntiatio]]''', noun of action from perfect passive participl
 <!--languages from J to Z go here-->
 *Japanese: [[発音]] (はつおん, hatsuon)
 *Korean: [[발음]] [發音] (baleum)
-*Latin: [[pronuntiatio]] ''nom.'', [[pronuntiationis]] ''gen.''
+*Latin: [[pronuntiatio]] (''nominative''), [[pronuntiationis]] (''genitive'')
 *Norwegian: [[uttale]] ''m''
 *Polish: [[wymowa]] ''f''
 *Portuguese: [[pronúncia]], [[pronunciação]]
@@ -45,20 +50,22 @@ From Latin '''[[pronuntiatio]]''', noun of action from perfect passive participl
 |}
 |}
 
-====See also:====
-*Wikipedia: [[en:SAMPA|SAMPA]]
-*Wikipedia: [[w:pronunciation|pronunciation]].
-*Wikipedia: [[en:Phoneme|phonemes]].
-*[[Wiktionary:Pronunciation key]]
+===See also===
+*[[SAMPA]]
+*[[w:pronunciation|Wikipedia article on pronunciation]]
+*[[phoneme]]
+*[[Wiktionary:Pronunciation key|Wiktionary's pronunciation key]]
 
 ----
-
 ==Interlingua==
 ===Pronunciation===
-:[pronuntsja'tsjon]
+*[[IPA]]: /pronuntsja'tsjon/
 
 ===Noun===
 '''pronunciation'''
 
-#Act, effect of way of [[pronounce|pronouncing]]. Pronunciation.
-#Proclamation, manifest. ''See:'' [[pronunciamento]]
+#pronunciation
+#pronunciation, [[proclamation]], [[manifest]]
+
+====Synonyms====
+*(''proclamation'') [[pronunciamento]]
