fixed incorrect IPA <helium#28641>

--- a/wiki/helium.wikitext
+++ b/wiki/helium.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 === Pronunciation ===
-*[[w:IPA|IPA]]: /'hilɪʌm/
+*[[w:IPA|IPA]]: /hiːlɪəm/
 ===Hyphenation===
 :he&middot;li&middot;um
 === Noun ===
@@ -59,7 +59,7 @@
 *Lithuanian: [[helis]]
 *[[Luxembourgish]]: helium
 *Macedonian: [[хелиум]] (helium)
-*[[Malay]]: [[helium]]
+*[[Malay]]: helium
 *[[Maltese]]: [[Ħiljum]]
 *[[Manx]]: [[hailium]]
 *Mongolian: [[гели]] (geli)
