--- a/wiki/pronunciation.wikitext
+++ b/wiki/pronunciation.wikitext
@@ -43,7 +43,7 @@ From Latin '''[[pronuntiatio]]''', noun of action from perfect passive participl
 *Norwegian: [[uttale]] ''m''
 *Polish: [[wymowa]] ''f''
 *Portuguese: [[pronúncia]], [[pronunciação]]
-*[[Romanica]]: [[pronunciation]] ''f''
+*[[Romanica]]: pronunciation ''f''
 *Russian: [[произношение]]
 *Spanish: [[pronunciación]] ''f''
 *Swedish: [[uttal]]
