--- a/wiki/helium.wikitext
+++ b/wiki/helium.wikitext
@@ -1,7 +1,8 @@
 ==English==
 
 === Pronunciation ===
-*[[w:IPA|IPA]]: /hiːlɪəm/
+*[[IPA]]: /ˈhiːlɪəm/
+
 ===Hyphenation===
 :he&middot;li&middot;um
 === Noun ===
