fmt, gender <ήλιο#64293>

--- a/wiki/%CE%AE%CE%BB%CE%B9%CE%BF.wikitext
+++ b/wiki/%CE%AE%CE%BB%CE%B9%CE%BF.wikitext
@@ -1,9 +1,9 @@
-==Greek==
-
-*Romanization: ilio, &iacute;lio
+==Modern Greek==
+===Romanization===
+'''ilio''', '''ílio'''
 
 ===Noun===
-'''ήλιο'''
+'''ήλιο''' ''n''
 
 #[[helium]]
 
