--- a/wiki/cariostat.wikitext
+++ b/wiki/cariostat.wikitext
@@ -1,3 +1,6 @@
 A '''cariostat''' is a machine for detecting dental [[caries]], especially in children.
 
-{{msg:stub}}
+{{stub}}
+
+[[Category:Dentistry]]
+[[Category:Medical equipment]]
