--- a/wiki/aspirin.wikitext
+++ b/wiki/aspirin.wikitext
@@ -11,6 +11,7 @@ From the German trademark ''Aspirin''.  The word is still used as a trademark in
 
 ====Translations====
 *Bulgarian: [[аспирин]] ''m''
+*Romanian: [[aspirină]] ''f''
 
 ===See also===
 *[[NSAID]]
