--- a/wiki/unsurpassed.wikitext
+++ b/wiki/unsurpassed.wikitext
@@ -1,5 +1,7 @@
 == Adjective ==
 # surpassing all others in some way
+*[unsurpassed at learning languages]
+*[unsurpassed by any competitor]
 
 == Synonyms ==
 * [[unexcelled]]
