--- a/wiki/unsurpassed.wikitext
+++ b/wiki/unsurpassed.wikitext
@@ -3,6 +3,10 @@
 
 == Examples ==
 *''unsurpassed at learning languages''
+*''unsurpassed by any competitor''
+
+== Examples ==
+*''unsurpassed at learning languages''
 *'''unsurpassed by any competitor''
 
 == Synonyms ==
