--- a/wiki/kiku.wikitext
+++ b/wiki/kiku.wikitext
@@ -1,5 +1,9 @@
 ==Japanese [[Romaji]]==
-===Verb===
-'''kiku''' ([[聞く]], [[きく]])
-
-# [[hear]], [[listen]]
+==Japanese==
+'''kiku''' ([[きく]])
+*Verb
+# (聞く) to [[hear]]
+# (訊く) to [[ask]]
+# (聴く) to [[listen]]
+# (効く) to have effective results
+# (利く) to be well functional
