--- a/wiki/kiku.wikitext
+++ b/wiki/kiku.wikitext
@@ -1,9 +1,9 @@
-==Japanese [[Romaji]]==
-==Japanese==
-'''kiku''' ([[きく]])
-*Verb
+==[[Japanese language|Japanese]] [[Romaji]]==
+'''Kiku''' ([[きく]]), ''verb''
 # (聞く) to [[hear]]
 # (訊く) to [[ask]]
 # (聴く) to [[listen]]
 # (効く) to have effective results
 # (利く) to be well functional
+'''Kiku''' ([[きく]]), ''noun''
+# (菊) [[Chrysanthemum]]
