--- a/wiki/%E3%81%8D%E3%81%8F.wikitext
+++ b/wiki/%E3%81%8D%E3%81%8F.wikitext
@@ -1,6 +1,6 @@
 ==Japanese [[Hiragana]]==
 ===Verb===
-'''きく''' (kiku)
+'''きく''' ([[kiku]])
 #<br>
 #: [[聞く]], [[聴く]]: [[hear]], [[listen]]
 #: [[訊く]]: [[ask]]
